--- a/res/layout/fragment_chart_pie.xml
+++ b/res/layout/fragment_chart_pie.xml
@@ -32,7 +32,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/feeding"
+            android:text="@string/eating"
             android:textSize="15dip" />
 
         <Button
