--- a/res/layout/fragment_playing.xml
+++ b/res/layout/fragment_playing.xml
@@ -13,34 +13,36 @@
         android:weightSum="4" >
 
         <ToggleButton
-            android:id="@+id/tBtn_Playing_mm"
+            android:id="@+id/tBtn_Playing_mom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textOff="@string/mothersmilk"
-            android:textOn="@string/mothersmilk" />
+            android:textOff="@string/mom"
+            android:textOn="@string/mom" />
 
         <ToggleButton
-            android:id="@+id/tBtn_Playing_mp"
+            android:id="@+id/tBtn_Playing_daddy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textOff="@string/milkpowder"
-            android:textOn="@string/milkpowder" />
+            android:textOff="@string/daddy"
+            android:textOn="@string/daddy" />
 
         <ToggleButton
-            android:id="@+id/tBtn_Playing_bf"
+            android:id="@+id/tBtn_Playing_family"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textOff="@string/babyfood"
-            android:textOn="@string/babyfood" />
+            android:textOff="@string/family"
+            android:textOn="@string/family" />
 
         <ToggleButton
-            android:id="@+id/toggleButton4"
+            android:id="@+id/tBtn_Playing_friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"            
+            android:textOff="@string/friend"
+            android:textOn="@string/friend" />
     </LinearLayout>
 
     <LinearLayout
