--- a/res/drawable/actionbar_background.xml
+++ b/res/drawable/actionbar_background.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/forestgreen"/>
+            <solid android:color="@android:color/black"/>
         </shape>
     </item>
 
