--- a/res/layout/activity_data.xml
+++ b/res/layout/activity_data.xml
@@ -1,7 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/papayawhip"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -23,7 +22,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="2dip"
-        android:background="@color/moccasin" />
+        android:background="@color/horizen_divider" />
 
     <LinearLayout
         android:layout_width="fill_parent"
