--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal"
+        android:background="@color/fragment_background"/>
 
 <android.support.v4.view.ViewPager
     android:id="@+id/pagermain"
