--- a/res/layout/activity_setting_listitem_header.xml
+++ b/res/layout/activity_setting_listitem_header.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
             android:text="@string/normal"
-            android:textSize="@dimen/text_size_18" />
+            android:textSize="@dimen/text_size_18"
+            android:textColor="@color/setting_heder" />
     </LinearLayout>
 
     <LinearLayout
@@ -25,6 +26,6 @@
         android:layout_marginLeft="@dimen/activity_vertical_margin_qhalf"
         android:layout_marginRight="@dimen/activity_vertical_margin_qhalf"
         android:layout_marginTop="@dimen/activity_vertical_margin_qhalf"
-        android:background="@color/black" />
+        android:background="@color/setting_header_divider" />
 
 </LinearLayout>
