--- a/res/layout/fragment_chart.xml
+++ b/res/layout/fragment_chart.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/fragment_background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -26,7 +27,7 @@
         android:layout_height="3dip"
         android:layout_marginBottom="10dip"
         android:layout_marginTop="10dip"
-        android:background="@color/peru" />
+        android:background="@color/black" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -66,7 +67,6 @@
             android:layout_weight="1"
             android:text="@string/etc"
             android:textSize="15dip" />
-
     </LinearLayout>
 
 </LinearLayout>
