--- a/res/layout/fragment_eating.xml
+++ b/res/layout/fragment_eating.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/papayawhip"
+    android:background="@color/fragment_background"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -78,7 +78,6 @@
 
         <Button
             android:id="@+id/btn_Eating_minus_small_ml"
-            style="@style/AppTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/minus_small_ml"
@@ -119,7 +118,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="2dip"
-        android:background="@color/mistyrose"/>
+        android:background="@color/black"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -218,7 +217,7 @@
         <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="2dip"
-        android:background="@color/mistyrose"/>
+        android:background="@color/black"/>
         
     <LinearLayout
         android:layout_width="fill_parent"
