--- a/res/layout/fragment_chart.xml
+++ b/res/layout/fragment_chart.xml
@@ -15,9 +15,13 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center" >
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="@dimen/activity_vertical_margin_qhalf"
+        android:layout_marginTop="@dimen/activity_vertical_margin_half" 
+        android:background="@drawable/legend_background">
 
         <ImageView
             android:id="@+id/imgview_legend_eat"
