--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,4 +22,22 @@
     <dimen name="dot_indicator_nomal">4dip</dimen>
     <dimen name="dot_indicator_sel">8dip</dimen>
     
+    <!--  Chart Dimen  -->
+    <dimen name="time_circle_fill">30dip</dimen>
+    <dimen name="time_circle_stroke">4dip</dimen>
+    <dimen name="time_text">15dip</dimen>
+    <dimen name="time_dot">8dip</dimen>
+    
+    <dimen name="circle_fill">20dip</dimen>
+    <dimen name="circle_stroke">3dip</dimen>
+    
+    <dimen name="center_circle_fill">4dip</dimen>
+    <dimen name="center_circle_radius">4dip</dimen>
+    <dimen name="center_remove_circle_radius">15dip</dimen>
+    
+    <dimen name="arc_select_stroke">2dip</dimen>
+    
+    <dimen name="dot_line_width">1dip</dimen>
+    <dimen name="dot_line_interval">5dip</dimen>
+    
 </resources>
