--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -1,9 +1,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ryutskr="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/fragment_background">
 
     <ListView 
         android:id="@+id/listview"
