--- a/res/layout/activity_data.xml
+++ b/res/layout/activity_data.xml
@@ -1,6 +1,5 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ryutskr="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -20,15 +19,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sliding_tabs"
         android:layout_marginBottom="@dimen/activity_vertical_margin_qhalf"
-        android:layout_marginTop="@dimen/activity_vertical_margin_qhalf"
-        ryutskr:isAdView="false"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin_qhalf"/>
 
     <LinearLayout
         android:id="@+id/divider"
         android:layout_width="fill_parent"
         android:layout_height="2dip"
         android:layout_below="@+id/viewPager_Activity_Data"
-        android:background="@color/divider" />
+        android:background="@color/divider"
+        android:orientation="horizontal" />
 
     <LinearLayout
         android:layout_width="fill_parent"
