--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -3,10 +3,18 @@
     tools:context="com.activity.babytimechart.PieActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="always"
+        android:id="@+id/menu_setting"
+        android:showAsAction="ifRoom"
         android:title="@string/action_settings"
         android:icon="@drawable/menu_settings"/>
+    <!-- 
+        <item
+            android:id="@+id/menu_share"
+            android:showAsAction="never"
+            android:title="Share"
+            android:actionProviderClass=
+                "android.widget.ShareActionProvider" />
+                
+                 -->
 
 </menu>
