--- a/res/drawable/dotindicator_select.xml
+++ b/res/drawable/dotindicator_select.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" 
     android:shape="oval" >
 
-    <solid android:color="@color/theme" />
+    <solid android:color="@color/dot_indicator_alpha" />
 
     <stroke
-        android:width="2dip"
-        android:color="@color/theme_alpha" />
+        android:width="1dip"
+        android:color="@color/dot_indicator"/>
 
 </shape>
