--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,8 +7,7 @@
     <color name="theme_alpha">#80CCEBF9</color>
     <color name="ab_divider">#B9E0F9</color>
     <color name="main_divider">#CCEBF9</color>
-
-    <color name="fragment_background">#90FFF0F5</color>
+    <color name="fragment_background">#FFF0F5</color>
 
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
@@ -19,6 +18,9 @@
     <color name="btn_diable">#E6E6DF</color>
 
     <!--  Chart Color  -->
+    <color name="dot_indicator">#00BCD4</color>
+    <color name="dot_indicator_alpha">#6000BCD4</color>
+
     <color name="time_circle_fill">#90C3F4FD</color>
     <color name="time_circle_stroke">#B9E0F9</color>
     <color name="time_text_color">#ff0000</color>
